--- a/cv/en/cv.tex
+++ b/cv/en/cv.tex
@@ -1,42 +1,55 @@
 \documentclass[11pt, a4paper]{moderncv}
 
 % moderncv themes
-\moderncvstyle{classic}												% las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
-\moderncvcolor{blue}												% opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
+% las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
+\moderncvstyle{classic}
+% opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
+\moderncvcolor{blue}
 
 % character encoding
-\usepackage[utf8]{inputenc}											% replace by the encoding you are using
+% replace by the encoding you are using
+\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 
 % adjust the page margins
 \usepackage[scale=0.93]{geometry}
-\AtBeginDocument{\setlength{\maketitlenamewidth}{13cm}}								% only for the classic theme, if you want
-														% to change the width of your name placeholder
-														% (to leave more space for your address details
-\AtBeginDocument{\recomputelengths}										% required when changes are made to page
-														% layout lengths
+% only for the classic theme, if you want
+% to change the width of your name placeholder
+% (to leave more space for your address details
+\AtBeginDocument{\setlength{\maketitlenamewidth}{13cm}}
+% required when changes are made to page
+% layout lengths
+\AtBeginDocument{\recomputelengths}
 
 % personal data
 \firstname{Olivier}
 \familyname{Détour}
 \title{\textbf{Research \& Development Engineer}\newline \Large{\textit{> 6 years of professional experience}}}
-\address{84 rue Marcadet}{75018 Paris}										% optional, remove the line if not wanted
-\mobile{+33 6 13 15 85 55}											% optional, remove the line if not wanted
-%\phone{phone (optional)}											% optional, remove the line if not wanted
-%\fax{fax (optional)}												% optional, remove the line if not wanted
 
-\email{detour.olivier@gmail.com}										% optional, remove the line if not wanted
-\extrainfo{Valid driving license}										% optional, remove the line if not wanted
+% optional, remove the line if not wanted
+\address{84 rue Marcadet}{75018 Paris}
+% optional, remove the line if not wanted
+\mobile{+33 6 13 15 85 55}
+% optional, remove the line if not wanted
+%\phone{phone (optional)}
+% optional, remove the line if not wanted
+%\fax{fax (optional)}
 
-\quote{Resume}													% optional, remove the line if not wanted
+% optional, remove the line if not wanted
+\email{detour.olivier@gmail.com}
+% optional, remove the line if not wanted
+\extrainfo{Valid driving license}
 
-%\photo[64pt]{picture}												% '64pt' is the height the picture must be resized
-														% to and 'picture' is the name of the picture file;
+% optional, remove the line if not wanted
+\quote{Resume}
 
-														% optional, remove the line if not wanted
+% '64pt' is the height the picture must be resized
+% to and 'picture' is the name of the picture file;
+%\photo[64pt]{picture}
 
-\nopagenumbers{}												% uncomment to suppress automatic page numbering
-														% for CVs longer than one page
+% uncomment to suppress automatic page numbering
+% for CVs longer than one page
+\nopagenumbers{}
 
 
 %----------------------------------------------------------------------------------
